--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Anukriti Singh
-logo: /images/ProfilePicture.jpg
+logo: /images/Profile.jpg
 show_downloads: true
 theme: jekyll-theme-minimal
